@@ -1,3 +1,7 @@
+XXXX XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>
+
+* Fix: completion did not offer anything for relative imports. Issue #402.
+
 2013 Aug 12 Sergey Satskiy <sergey.satskiy@gmail.com>
 
 * Version 2.1.0
